fixed responsive with flex-wrap and fixed width for flex item

--- a/app/code/Sawai/Mymodule/view/frontend/web/css/mymodule.less
+++ b/app/code/Sawai/Mymodule/view/frontend/web/css/mymodule.less
@@ -14,8 +14,10 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: space-between;
       .item {
-        width: ~"calc(25% - 40px)";
+        // width: ~"calc(25% - 40px)";
+        width: 270px;
         padding: 20px;
         .img {
           height: 320px;
